made the template for servicesMgmt site specific

Corrected minor title setting bug on commonscript XSL

Extended vcard to include KEY, REV, PRODID, and CLASS, also fixing IM references
to be compliant with RFC 4770

Fixed generated dsml structure to better match spec - pushed searchResponse 
back under a batchResponse node and change mgmt and org XSL back to reference 
the correct XPath




Revision 0.91
===================
Fixes to eliminate infinite loop in the vertical wrap to ensure IE displays the card view correctly and does not hang. This is related to a change in XSL based rendering in IE, requiring deferal of the wrap function call through a timeout.

Introduce session persistence to the LDAP store to offer an alternative to passing credentials in the cookie, replacing content instead with a session id. An additional alternative is also introduced to embed the session id in the URL

Introduced server side XSL transformation - integrated into vcard display for the contact records and in general response handling for blackberry user agents.

Fixed issue with poor handling of '&' in dn for URL reference to jpegPhoto which was causing some transformations to fail due to incorrect XML parsing

Completed the change to DSML response type for jpegPhoto inclusion in the stream to ensure requests from IE return a URL to the photo and not the binary stream while continuing to pass the encoded image to firefox / mozilla based browsers

Established uniform page head elements across all pages through introduction of XSL includes and imports

Introduced performance improvements by adding indexes in the XSL processing.

Introduced first page customizations for handheld user agents - initially only supporting blackberry - to include suppression of JS to wrap columns in the card style. UserAgent parameter added to all xsl templates via the new DSML_sitefrags.xsl inclusion. Telephone dialing, emailing, and SMS functional within handheld devices and tested on the blackberry.